--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@ui/mantine-config",
   "version": "1.1.1",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/index.js",
+  "types": "src/types.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
